--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "nooranistudentsystem",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "CLi_Student_Managment_System",
   "main": "index.js",
   "type": "module",
-  "bin": "index.js",
+  "bin": {
+    "nooranistudentsystem": "index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
